infrastructure/kubernetes/overlays/dev/hosts-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: amuse-api
  namespace: amuse
spec:
  hostnames:
    - api.skynet-beta.m8.io.vn
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: amuse-consumer
  namespace: amuse
spec:
  hostnames:
    - app.skynet-beta.m8.io.vn
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: amuse-business
  namespace: amuse
spec:
  hostnames:
    - business.skynet-beta.m8.io.vn
